typescript/checker/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInRegularExpressions19_ES5.ts.stderr
error: unimplemented
expand_export_info(RegExp)
File: $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInRegularExpressions19_ES5.ts
 --> $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInRegularExpressions19_ES5.ts:3:9
  |
3 | var x = /\u{}/g;
  |         ^^^^^^^

